k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: unetoaraujo/react-app:latest
        ports:
        - containerPort: 80
