k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: production
spec:
  selector:
    app: react-app
  ports:
    - name: http
      port: 8080
      targetPort: 80
  type: NodePort
