k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devops-challenge.me
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: react-app-service
              port:
                number: 8080
